refactor(backend): 重构图片服务常量定义和控制器代码
feat: 新增图片常量类包含文件处理、业务规则等常量定义
refactor(PictureController): 优化代码结构，增加方法注释和参数校验
style: 统一代码格式和命名规范，移除无用代码
docs: 更新接口文档注释和类说明